--- a/helm/Containerfile
+++ b/helm/Containerfile
@@ -8,4 +8,6 @@ ENV FORCE_CMAKE=1
 ENV BANANAS="ARE COOL"
 RUN pip install llama-cpp-python==0.2.39
 RUN cd /opt/app-root/src
-RUN git clone https://github.com/aspanner/AIOps/ 
+RUN git clone https://github.com/aspanner/AIOps
+
+RUN echo 'ls /opt/app-root/src/AIOps'
