--- a/helm/Containerfile
+++ b/helm/Containerfile
@@ -10,7 +10,10 @@ RUN pip install llama-cpp-python==0.2.39
 
 RUN git clone https://github.com/aspanner/AIOps
 
-RUN mv /AIOps /opt/app-root/src
+# RUN mv /AIOps /opt/app-root/src
 
-RUN echo ls /opt/app-root/src/AIOps
+RUN echo "We are in directory:"
+RUN echo pwd
+
+# RUN echo ls /opt/app-root/src/AIOps
 
