--- a/helm/Containerfile
+++ b/helm/Containerfile
@@ -8,13 +8,16 @@ ENV FORCE_CMAKE=1
 ENV BANANAS="ARE COOL"
 RUN pip install llama-cpp-python==0.2.39
 
-WORKDIR /opt/app-root/src
-RUN git clone https://github.com/aspanner/AIOps
+# WORKDIR /opt/app-root/src
+# RUN git clone https://github.com/aspanner/AIOps
 
 # RUN mv /AIOps /opt/app-root/src
 
-RUN echo "We are in directory:"
-RUN echo pwd
+
 
 # RUN echo ls /opt/app-root/src/AIOps
+
+
+WORKDIR /app
+RUN git clone https://github.com/aspanner/AIOps
 
