--- a/helm/Containerfile
+++ b/helm/Containerfile
@@ -17,7 +17,9 @@ RUN pip install llama-cpp-python==0.2.39
 
 # RUN echo ls /opt/app-root/src/AIOps
 
-
+USER root
 WORKDIR /app
 RUN git clone https://github.com/aspanner/AIOps
+
+USER 1001
 
