--- a/helm/Containerfile
+++ b/helm/Containerfile
@@ -8,20 +8,17 @@ ENV FORCE_CMAKE=1
 ENV BANANAS="ARE COOL"
 RUN pip install llama-cpp-python==0.2.39
 
-# WORKDIR /opt/app-root/src
-# RUN git clone https://github.com/aspanner/AIOps
-
-# RUN mv /AIOps /opt/app-root/src
-
-
-
-# RUN echo ls /opt/app-root/src/AIOps
+RUN adduser --disabled-password --gecos '' appuser
 
 USER root
 WORKDIR /app
 RUN git clone https://github.com/aspanner/AIOps
 
-RUN mv /app/AIOps /opt/app-root/src
+RUN cd /app/AIOps
+RUN ls -alh
 
-USER 1001
+
+RUN cp /app/AIOps /opt/app-root/src
+
+USER appuser
 
